apps/base/home-assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:2026.3.4
          ports:
            - containerPort: 8123
              name: http-ha
          volumeMounts:
            - name: config
              mountPath: /config
            - name: ha-config
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              readOnly: true
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant-config-pvc
        - name: ha-config
          configMap:
            name: ha-config
